// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAccordionItemTreeTableComponentOptions should normalize complex accordion item tree table component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./files-panel/files-panel.component",
      "name": "FilesPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "explorer-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "files-panel",
  "context": null,
  "controllerName": "files",
  "description": null,
  "directory": "explorer-accordion/files-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "tree-table",
  "modifiers": [],
  "name": "files",
  "nestModule": "explorer-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "table": {
    "actionList": [],
    "backend": {
      "kind": "none",
    },
    "columnList": [
      {
        "active": false,
        "cssClass": [
          {
            "name": "w-[100px]",
          },
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "filterControl": null,
        "filterCssClass": [
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "filterName": "filter_tree",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": [
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "hidden": true,
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@rxap/material-table-system",
            "name": "TreeControlCellComponent",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "tree",
        "memberList": [],
        "modifiers": [],
        "name": "tree",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "tree",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": "start",
        "stickyEnd": false,
        "stickyStart": true,
        "synthetic": true,
        "template": "tree-table-column.hbs",
        "title": "Tree",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_name",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "name",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "name",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Name",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_size",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "size",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "size",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Size",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": [
          {
            "name": "w-[15px]",
          },
          {
            "name": "min-w-[15px]",
          },
        ],
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_spinner",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": true,
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/progress-spinner",
            "name": "MatProgressSpinnerModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/common",
            "name": "NgIf",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/common",
            "name": "AsyncPipe",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "spinner",
        "memberList": [],
        "modifiers": [],
        "name": "spinner",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "spinner",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": true,
        "template": "spinner-table-column.hbs",
        "title": "Spinner",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "componentName": "files-tree-table",
    "cssClass": null,
    "filterList": [],
    "hasPaginator": false,
    "headerButton": null,
    "identifier": null,
    "modifiers": [
      "with-header",
    ],
    "propertyList": [
      {
        "isArray": false,
        "isOptional": true,
        "memberList": [],
        "name": "icon",
        "source": null,
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/utilities",
          "name": "IconConfig",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_name",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "name",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "name",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Name",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_size",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "size",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "size",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Size",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "rowId": null,
    "sortable": {
      "default": null,
      "enabled": false,
    },
    "tableChildMethod": null,
    "tableRootMethod": null,
    "title": "Files",
    "upstream": null,
    "withHeader": true,
  },
  "template": "tree-table-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;

exports[`NormalizeAccordionItemTreeTableComponentOptions should normalize minimal accordion item tree table component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./test-att-panel/test-att-panel.component",
      "name": "TestAttPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "test-att-panel",
  "context": null,
  "controllerName": "test-att",
  "description": null,
  "directory": "parent-accordion/test-att-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "tree-table",
  "modifiers": [],
  "name": "test-att",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "table": {
    "actionList": [],
    "backend": {
      "kind": "none",
    },
    "columnList": [
      {
        "active": false,
        "cssClass": [
          {
            "name": "w-[100px]",
          },
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "filterControl": null,
        "filterCssClass": [
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "filterName": "filter_tree",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": [
          {
            "name": "drop-shadow-2xl",
          },
        ],
        "hidden": true,
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@rxap/material-table-system",
            "name": "TreeControlCellComponent",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "tree",
        "memberList": [],
        "modifiers": [],
        "name": "tree",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "tree",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": "start",
        "stickyEnd": false,
        "stickyStart": true,
        "synthetic": true,
        "template": "tree-table-column.hbs",
        "title": "Tree",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_col1",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "col1",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "col1",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Col1",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": [
          {
            "name": "w-[15px]",
          },
          {
            "name": "min-w-[15px]",
          },
        ],
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_spinner",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": true,
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/progress-spinner",
            "name": "MatProgressSpinnerModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/common",
            "name": "NgIf",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/common",
            "name": "AsyncPipe",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "spinner",
        "memberList": [],
        "modifiers": [],
        "name": "spinner",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "spinner",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": true,
        "template": "spinner-table-column.hbs",
        "title": "Spinner",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "componentName": "test-att-tree-table",
    "cssClass": null,
    "filterList": [],
    "hasPaginator": false,
    "headerButton": null,
    "identifier": null,
    "modifiers": [
      "with-header",
    ],
    "propertyList": [
      {
        "isArray": false,
        "isOptional": true,
        "memberList": [],
        "name": "icon",
        "source": null,
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/utilities",
          "name": "IconConfig",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_col1",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "col1",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "col1",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Col1",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "rowId": null,
    "sortable": {
      "default": null,
      "enabled": false,
    },
    "tableChildMethod": null,
    "tableRootMethod": null,
    "title": "Test Att",
    "upstream": null,
    "withHeader": true,
  },
  "template": "tree-table-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;
